unpackaged/main/default/objects/Enrollment__c/fields/Class_X__c.field-meta.xml
<CustomField>
    <fullName>Class_X__c</fullName>
    <label>Class X</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>