unpackaged/main/default/objects/Enrollment__c/fields/Class_XII__c.field-meta.xml
<CustomField>
    <fullName>Class_XII__c</fullName>
    <label>Class XII</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>