unpackaged/main/default/objects/Enrollment__c/fields/Enrollment_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Count__c</fullName>
    <label>Enrollment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>