unpackaged/main/default/objects/Enrollment__c/fields/Stream_Name__c.field-meta.xml
<CustomField>
    <fullName>Stream_Name__c</fullName>
    <label>Stream Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Streams</valueSetName>
    </valueSet>
</CustomField>