unpackaged/main/default/objects/Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_X__c</columns>
    <columns>Class_XII__c</columns>
    <columns>Department__c</columns>
    <columns>Eligibility_criteria__c</columns>
    <columns>E_mail__c</columns>
    <columns>Enrollment_Date__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>